Added displays to sales__details in css.
Added display none to sales__details. Added another sales details in
css with data state active. Put display block in this. In js, added
variables for sales and sales__details.

--- a/css/main.css
+++ b/css/main.css
@@ -87,9 +87,14 @@ body {
   padding: 2em;
   position: absolute;
   width: 90%;
+  display: none;
 
   background-color: #000;
   border-radius: 6px;
+}
+
+.sales__details [data-state="active"] {
+	display: block;
 }
 
 .sales__details::before {
@@ -156,3 +161,4 @@ body {
 
   text-indent: 100%;
 }
+
